--- a/admin/add.html
+++ b/admin/add.html
@@ -10,16 +10,12 @@
 	<form action="add.php" method="post" name="form1">
 		<table width="25%" border="0">
 			<tr> 
-				<td>Post</td>
+				<td>Article Name: </td>
+				<td><input type="text" name="artname"></td>
+			</tr>
+			<tr> 
+				<td>Article Content: </td>
 				<td><input type="text" name="post"></td>
-			</tr>
-			<tr> 
-				<td>Age</td>
-				<td><input type="text" name="age"></td>
-			</tr>
-			<tr> 
-				<td>Email</td>
-				<td><input type="text" name="email"></td>
 			</tr>
 			<tr> 
 				<td></td>
